--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Holiday PLanner Tour & Travels</title>
+  <title>Holiday Planner Tour & Travels</title>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
 </head>
 <body>
   <div id="root"></div>
